app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;
@import "prism-oceanic-next";

@layer base {
  body {
    @apply font-sans bg-gray-50 text-gray-600 dark:text-gray-100 dark:bg-black;

    main {
      @apply w-full md:w-4/5 mx-auto px-4;

      h1, h2, h3, h4 {
        @apply py-2;

        em {
          @apply text-caribbean-green-600 not-italic;
        }
      }

      h1 {
        @apply text-4xl font-extrabold leading-8;
      }

      h2 {
        @apply text-3xl font-bold leading-8;
      }

      h3 {
        @apply text-2xl font-bold leading-6;
      }

      h4 {
        @apply text-xl font-bold leading-6;
      }

      p {
        @apply leading-6 py-2;
      }

      code {
        @apply text-red-600;
      }

      p > code, li > code {
        @apply whitespace-pre-wrap break-words;
      }

      pre code {
        @apply bg-black text-white rounded block float-left px-8 w-full relative shadow-lg;
        -webkit-overflow-scrolling: touch;
        overflow: initial;
        overflow-x: auto;
      }

      header {
        nav {
          @apply flex items-center justify-between;

          ul {
            @apply flex flex-col py-2 md:py-0 md:flex-row md:space-x-4 font-bold;

            li {
              @apply border-b-2 py-2 md:border-b-0 md:py-0 text-center md:text-left block md:inline w-full md:w-auto;

              a {
                @apply hover:text-caribbean-green-600 pb-2 md:hover:border-b-4 hover:border-caribbean-green-600 duration-200 delay-200 block md:inline w-full md:w-auto;
              }
            }
          }

          form ul {
            @apply space-x-0 z-10 absolute bg-gray-50 shadow-lg grid grid-cols-1 mr-4 md:mr-0;

            li {
              @apply border-2 border-gray-300 p-2 block;
            }
          }
        }
      }

      .content-wrapper {
        @apply flex flex-wrap;

        .content {
          @apply flex-grow w-full lg:w-2/3;

          blockquote {
            @apply w-full bg-caribbean-green-50 border-caribbean-green-400 border-l-4 p-4 shadow-lg my-4 dark:text-gray-600 rounded-r-lg;
          }
        }

        aside {
          @apply w-full lg:w-1/3 lg:pl-2 py-4;

          section {
            @apply p-4 rounded-lg shadow-lg bg-caribbean-green-500;

            ul {
              @apply list-disc pl-4;
            }
          }
        }
      }

      hr {
        @apply hidden;
      }

      section.newsletter {
        @apply w-full lg:w-3/4 p-4 mx-auto text-center bg-gradient-to-br from-caribbean-green-400 to-caribbean-green-600 rounded-lg shadow-lg;

        input {
          @apply w-full p-2 my-2;
        }

        button {
          @apply w-full p-2 my-2 border-2 border-white rounded-sm;
        }
      }

      footer {
        @apply text-center;
      }
    }
  }
}

